--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,600;1,400&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,600;1,400&display=swap');
 
 * {
   box-sizing: border-box;
@@ -13,6 +13,7 @@ a {
 
 body {
   font-size: 20px;
+  color: #fff;
   background-color: #09131b;
-  font-family: 'Titillium Web', sans-serif;
+  // font-family: 'Titillium Web', sans-serif;
 }
